<resources>
    <string name="app_name">WallpaperSearcher</string>
    <string name="favorite">Favorite</string>
    <string name="categories">Categories</string>
    <string name="all_characters">All characters</string>
    <string name="settings">Settings</string>
    <string name="menu_home_title_text">Home</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="share">Share</string>
    <string name="download">Download picture</string>
    <string name="change_theme">Change Theme</string>
    <string name="theme">Theme</string>
</resources>